@@ -23,6 +23,8 @@ Fixed some error messages in MySQL store.
 
 Added support for reconnect in MySQL 5.
 
+Display file name when FileStore or File Log cannot open a file.
+
 1.12.0
 ------
 SocketAcceptor and ThreadedSocketAcceptor can listen for connections on
